@@ -25,6 +25,9 @@ DIST genpatches-3.18-13.extras.tar.xz 16188 SHA256 f2e51800f79c814199bcbc9911595
 DIST genpatches-3.19-4.base.tar.xz 149032 SHA256 c3d23689206a7c5d3c851424ca38edfd903e0aaf31aa607f5d9c82108ae4ae59 SHA512 dc78e638b242bcc93deb1f7ca50843e02cb4904d850031867ce2fd00a0ee1fefc4e3657fde2a4d2647606607abf935b15fba1f86d4f0011230eff24a83f0f670 WHIRLPOOL 147fb303afd8694b1da45b8e7cecab186c1d739c4b3ea5f5fe744f233008b1bb7b52d2b5911ca8eb2a6d99df2fa25e27992d03853dcfa352526453bf71670d68
 DIST genpatches-3.19-4.experimental.tar.xz 61644 SHA256 0127ff5c4902d446b80e3c38cf37b57899d7c05d650d270a13e22ce3eec2e4f1 SHA512 41066df571583dabd082ab0eec6d00bca8cdc26ec38997fcabcd1a759e7a25add31141670236ce7ef526a256a20f576d298de58457c13b134ba3434d0d1ffb18 WHIRLPOOL 09fe9ce8b6f135bfc2c875835a4bdc491ed795377ded524aeff06d1aac1c4b1505084be26e9e9b72326ced848aee2745c8230099a7dbd1613fa92e705f250c35
 DIST genpatches-3.19-4.extras.tar.xz 16280 SHA256 6c5a7b4dc060f733c5178e5c7bb850304ec63d25cadff2e74b2592cb682750a8 SHA512 01a57204e66e3e5a78dbf1f37c3e5a037799f2b2f5264b2fbf4de0aa3c1cf0aefecc9c672d9432c2d6329b50aaeb322894b465b7a9614ea97d0853bf02739366 WHIRLPOOL cfc00e8f11985d137ad599870c62b77742176b4f7df951e676bab81b8791707db35b3e3c0320cb56ab27e7e13dfca82904be257e0cec7a43bfbb7bff6b6d6b1e
+DIST genpatches-3.19-5.base.tar.xz 169448 SHA256 2703ff315840efbd78a2de93b46954961776c0e60a35ebb59f0d0a86fc343722 SHA512 b82d177378fc7d29bffc89f24e6471dbdba176794ae48ecec5c7419279ab8c955becb49a22edea20a5bd02352e4d87cba16597db18ea5364d12399c5ffcce76c WHIRLPOOL 225ade3329708f739f37b04ec4bdeb8e98fe0e07fa253d5f67e5b1a659f91a35454dd339644f28de300a5dd5a56f088d5b077b61f588d9f0b1847cd56a932434
+DIST genpatches-3.19-5.experimental.tar.xz 61648 SHA256 c93adcda27d12769c935c9491d7287373ee75aee93a6a3adc12e88a33d883dd2 SHA512 d320f19203a3b7217d612e577775ff230470a4b5594077ba2f014e963b9d91532383f7567335c7b75ff90062bdf29b1d4c5adbb8680f03151f434259afcbae59 WHIRLPOOL 03c7b87f5bc2a4ef7a52fa5d73175fed4b3bbb9f2a6ede01e99ae155e638db767643f0d76f6a9c9f3accedcbe1b2361987f3e056abb544c07af0164ac3c93392
+DIST genpatches-3.19-5.extras.tar.xz 16276 SHA256 1fc718e10dfdfedbaeb896c60c5cfe95c7d1fe4af23de8596a467c309ddcb18a SHA512 7a866aadf905cd463a527e517021bc5060045f7c3b9fb82d0031b399fbd8d9b69db15547ec8ee6eb9e9fd81ca6613a1fe9d2cfed74f474884f42e15eafc8b487 WHIRLPOOL 2c2eeb44761bfb01de861acd58df12bdf5ad339eeec825cd0b9669f5287bc73e38cfbcc6aa904ae222b68514fe736aa33ffe5db2c3dab75dedc93493600caa17
 DIST genpatches-3.4-89.base.tar.xz 1274612 SHA256 67f1fc28b1a48e201d011f543aa8cbb2cbf596557cde7e66e68c40310639d327 SHA512 2e3ff2b26a0a4f7bbabda2b1845660ccfaead481c408af461b3bd8965a9657b99a5aac80fd8735d6eb6b1e0e9e5699bb5f9cb9c45d6845b37abfd17c546ca4bf WHIRLPOOL 78af99b652223aca35ac94e6e9d7d696b17cfd5690183deb9e0eda831925866145ec8ddf6e5e9e9f6e39a215af0e3b25c2165878557737997816106ad6b69eb5
 DIST genpatches-3.4-89.extras.tar.xz 18240 SHA256 c93ee7aa7b095db85cb12f990a2d344e87f4caaee64cdd8e85336c483459b69d SHA512 936c2baf1b5015913a1dc2f43353cd8286a5749f5deb382c0cf569d9ca302b9f85c6ba678d77156c5d54c87ba2f3147751fe4622fd6738b2d1b55b0f44c09c34 WHIRLPOOL 7a8d218525509e1a1eddba81341cb20ac06a4b4120d2e43a92d0855584e38eb39ce497538931d4972e2406bd48ce77f2613aea3a407b0f884936fa9ff22fa6fc
 DIST genpatches-4.0-1.base.tar.xz 3720 SHA256 e1abe1fdf42dda7e0e5aef9843bc5d240416c6fbde8dcca44e2a43b5e5f6c2f1 SHA512 3d67dba40ff8501d258e9a30996d70be5e614661f76fd4978c5837f16b42f1ac9015010e7b6a9826ed20c0723547d19ffafd54dcface2a41b0a95d23aa72dcbb WHIRLPOOL 791a508360e23160a7ba9dbc3f6c311727cb638693fa63354e60a847aa0bed7ea6c2d8b0e2605d1cfdcc77101caab9c0b8886a5fe71effa03dbe47895f44e3bd
@@ -47,17 +50,18 @@ EBUILD gentoo-sources-3.18.10.ebuild 901 SHA256 881b8e6897cd4ce1a7adb82fb3b5771b
 EBUILD gentoo-sources-3.18.11.ebuild 897 SHA256 b701820f20494192fa0ba4edf25c4bc534cf4f8bc185be2ee2f8bedf0d063802 SHA512 aeff7c4b1e7914cbf494c30e6c8ef45ea45760955d7202c7c18241e8200014d32a34fca9aef8d69ab5cfcffee8fac05ecb174a87c13b65dec97ca19c196f45a9 WHIRLPOOL 8d30770f2e9950ec9342527ffa9382e06bd26f79039fd2d04281af7477b7f76a07b6abeddad8e3982a148b15a295052d092eb85afef9b1e13a81b28c7cd70ece
 EBUILD gentoo-sources-3.18.9.ebuild 896 SHA256 c32df4e4e0f6e2bd6d23a0d4b239d80e59f481e6a0c21658f2a7568e8e4c7329 SHA512 ef967de4acfca034dd368924d74dc331ec60568bf1d71e1c00ee1a5186f9aa3e24042ce680eecd01f4fd2af06b7d23364b5ac4afbd9a8ef305673fe242448749 WHIRLPOOL f9fc3bd111d96bde35ce2c37b7b153a70d40543a50483b15a26ef0208d9a720481fc877a954b873b4b486a033b3513ec97da97c8c59890b1921cfe5868cd189c
 EBUILD gentoo-sources-3.19.3.ebuild 899 SHA256 dc7ae453e766f0862ca791f0668da776922e74bea2ca21591692331ca43c1afc SHA512 6a25a488c562600920f218baa6da3bc2d8164199bf2b63fba43876b1f18070cb6597ce071567835d8ae28541c6c1e768fa26138ad7593f204b1eb4f55a4935b2 WHIRLPOOL ac37445738592e4bba732fb1fd5368b43e996e609a06b4e4d4d8dfc316a4863b6a9581c23280239cf5f0b17f2e9e2ddf94a9b0fb64842ff63f82e2dc5f09bdfc
+EBUILD gentoo-sources-3.19.4.ebuild 899 SHA256 2f4ecac8071c2f8d4bacbccf8eed53e354f99e15af9f36e6fe75a673b83426a5 SHA512 04966af954cdc7f28ec758003b65cecae3f1132867d892a473a640a0a7c123927ca27a5bccdd3248d99fa5ce3dc99f16fb10bcce9a94aae9443faee7e7cf9d98 WHIRLPOOL 37b5e5d2c9d888d92822037acbc47664a6d7ad401ba3732277327577e459d2f8a650252fc01531271b87702f32f5f650f55c2598ae81aa991a0c7c0fa20b4114
 EBUILD gentoo-sources-3.4.106.ebuild 862 SHA256 a0f88d28e7fedea5985d0d3ab5e5fa2ca669376811e388417a777a1dc5a979b8 SHA512 2f91e205bc16edd5da3c730635bc492c664484fd8f6895068fdce55d1276c68dacfd8da3084e3445a7bcafd429c19e304407c4973214cace5799a65aedd7e245 WHIRLPOOL 3ea611ce7f0502f38891722b8814d99b55b4a9cdde9aca61a35c20af3a7b7089d69aaba7dcdfcb17101b685c5af9d1bfe5c37f87a8edffb1017b41765d452c7e
 EBUILD gentoo-sources-3.4.9999.ebuild 2262 SHA256 5c40a937692469c313f62bc8aa6909f78b65d98b7e8865e66c4b4fd9f51c40aa SHA512 f896d03460b4c2a470a94cc250d4e4970a7e7f6293e36cb407ecd767f147ef858790a4fb5535d4aa9ea24edc5cee8e87c529c72b32fd4016c0d74dfcc8711caa WHIRLPOOL 7d8c2db2f783641e744d4ade8328a2f2869edab5a8c7291a35e14a497dbcfb5b5430f86fba6ef91645433fafaae21497a851519f7f44234e3dbe39b161c61d5e
 EBUILD gentoo-sources-4.0.0.ebuild 898 SHA256 b414a4348a54e3e7c1aee9ffd0e4d0c7a1e25270ce8989a182085d069c2ab361 SHA512 90c81b8922a70f313ca933c952e1feca72c89d67683a20520fcd663dec0a9cc0b9d72b696a689b081b056e3c755ae3eef97e19ad8d763c672cfd08444f97fea9 WHIRLPOOL 584622e3b9ba7a399be43aed851e5083444d7765cf3721b61536e12e4074777211afc0ddbe5b463943995bf9f28e872315c1b7ad50013939c1efc8e60ff17a1d
-MISC ChangeLog 106090 SHA256 455d0cb99b686cd9656b341ae5e080cf7a556a7a260d3ecb285fcecae43c94d6 SHA512 b98f5f110d9288862b5cd5e538c4161ddb78082b168b1fe17a7d9c8e76e88e3891b61cbd39b4c1ea8c4eb59ef7565172f726e1d3ff3afbf2eedaf1ec1c04198e WHIRLPOOL f4fd0f6a6a4eed7c4528db563d6d4a0ed9c26036a14d6b098dcc9f042daf252c0cd06dad74f9640042b9274dec54d16a9f117dcbf5b58bb0370e463d7a2e83de
+MISC ChangeLog 106299 SHA256 ffccf8d0f435589fef9ee107f333425fef6fb21fa5384fc421b950da9ce97d52 SHA512 1dc21dff14224f70389f04756bb3db945f6456571c0633f7956a5b2123787b27753a1216f7ce5f53f6792b918cee49258b06d9a049d1a9be4ea2e2de9ae681ca WHIRLPOOL ac030ced35ff1d97d5fd5e2c4763ed1aeefedbac47d2c064761601069459984e14ceb9f2498eb342265ca1265e331b376c4502eab97faceea178b3948cadccb9
 MISC ChangeLog-2007 91971 SHA256 8c37498df2246749abb2fd1eca05c396257989b91ba5ec0f83cedb25488118a9 SHA512 2215a9856bc1706abe21ad51d0af6176fec226e85a56ad8f54664d20a041bbe076359347f473a87c47904df2d8d2006d56d1535528b2eb7aa756f96ad9554876 WHIRLPOOL dd881fa7bbfc42ca35a46a0fe01d751b3373ac8f4e2ce5626ff26f94244d729e107f57b1be43daf3b73c2f18b090ee896d8a5eb38888fa9ca01097d1cbd46da7
 MISC ChangeLog-2012 101665 SHA256 a60304f93fc4644cdf0b068e586f6036d4463ea4b21bd745a8aa926da71db6ec SHA512 892085806f4c87f64db78e04d3c215ae6bca8939ffeced8a3792fe4a2476e72d2cc9dbc8a3b906943971eb853c337847e6a8bf976f9496be9944e216fb983234 WHIRLPOOL 590f17b5a90f48fa1733959500ce06fd72f95524b64b6abf508653a616961af2c0ea04ca2dbfe5523ff9dcd3bc67b3b24bc368eb84326d091ca449e558555f46
 MISC metadata.xml 512 SHA256 80143273f4462ac67194f8ef90706e5ebf65f3f30ff153b7ee19d2c155f49f7b SHA512 6262ba3cbc6480081a195024fc752ad0df27afe9b71d626d759f747a52a2a181d114379e463bd8741a843622556c1e46820e535e8fbe71e2790828370d70c5f0 WHIRLPOOL b4430c0590efa2c5cbfc85fed1386943f4c8d101dfc07a76ba79c37b1fe2fe4db21f65b58186e1cad1ea3987292c2ea0251f0e2017be018c020f7e2309b57bd1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUrDaoACgkQPDPGULV25ONR1ACgsh8dfmB8nkhm1eNgniOi2QNX
-CVAAn2qOWzJ70lPiKuGGsMwpRu/0aXt8
-=20Vq
+iEYEAREIAAYFAlUsYncACgkQPDPGULV25ONc/wCgppdvIq6HNr7xRN79takNcX5P
+2qQAn30FfTu8pb6FkVBcH417aQ4X17S1
+=7YMo
 -----END PGP SIGNATURE-----
