@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1531 2015/04/13 00:28:19 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1532 2015/04/14 00:42:22 mpagano Exp $
+
+*gentoo-sources-3.19.4 (14 Apr 2015)
+
+  14 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.19.4.ebuild:
+  Linux patch 3.19.4. Add check to saved_root_name for supported filesystem
+  path naming.
 
 *gentoo-sources-4.0.0 (13 Apr 2015)
 
